--- a/src/app/pages/weather/weather.component.html
+++ b/src/app/pages/weather/weather.component.html
@@ -1,1 +1,4 @@
-<app-weather-card></app-weather-card>
+<div class="weather-card-wrap">
+  <app-weather-card [forecast]="forecast"></app-weather-card>
+</div>
+
